# Trading-Simulator

./: README.md  pyproject.toml
src/: main.py  strategy.py  ticker.py
